--- a/BT01/bt1_5.html
+++ b/BT01/bt1_5.html
@@ -10,17 +10,17 @@
 		<hr align="center" width="60%">
 		<b><font color="blue" size="+3">SAMSUNG X520 - YELLOW</font></b>
 		<br>
-		<img src="../img/Samsung1.jpg" alt="ảnh điện thoại">
+		<img src="../img01/Samsung1.jpg" alt="ảnh điện thoại">
 		<br>
 		<b><p>Giá: 1.759.000 VND</p></b>
-		<img src="../img/sao.png"><img src="../img/sao.png"><img src="../img/sao.png"><img src="../img/sao.png">
+		<img src="../img01/sao.png"><img src="../img01/sao.png"><img src="../img01/sao.png"><img src="../img01/sao.png">
 		<hr align="center" width="60%">
 		<b><font color="blue" size="+3">SAMSUNG X520 - RED</font></b>
 		<br>
-		<img src="../img/Samsung2.jpg" alt="ảnh điện thoại">
+		<img src="../img01/Samsung2.jpg" alt="ảnh điện thoại">
 		<br>
 		<b><p>Giá: 1.759.000 VND</p></b>
-		<img src="../img/sao.png"><img src="../img/sao.png"><img src="../img/sao.png">
+		<img src="../img01/sao.png"><img src="../img01/sao.png"><img src="../img01/sao.png">
 	</center>	
 </body>
 </html>
