--- a/Unit03/index.html
+++ b/Unit03/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<style>
 		p{
-			color: red;
+			color: green;
 		}
 		div{
 			width: 100%;
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quas itaque cumque reprehenderit accusantium tempore incidunt voluptatem vel vitae dolorem.</div>
-	<p style="red">Lorem ipsum dolor sit amet.</p>
+	<p style="color: red">Lorem ipsum dolor sit amet.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, earum.</p>
 	<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, voluptatum!</strong>
 </body>
