--- a/BT04/bt4_1.html
+++ b/BT04/bt4_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>bt4_1b</title>
+	<title>bt4_1</title>
 	<link rel="stylesheet" type="text/css" href="bt4_1.css">
 	<link rel="stylesheet" type="text/css" href="../thuvien/css/font-awesome.min.css">
 </head>
